--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,8 @@
   <input type="text" id="Password" name="Password" autofocus required><br><br>
   <a href="#">Forgot password?</a><br><br>
   <input type="submit" value="sign in">
+  <a href="#">Forgot password?</a><br><br>
+  <input type="submit" value="sign in">
 </form><br>
 <section>
   <img src="/images/img1.png" alt="main banner" width="100%" height="700px">
